Pasted in a function to copy text that works.

--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -63,7 +63,7 @@
                             <code id="stuntsCode">
                                 No stunts die set.
                             </code>
-                            <input type="button" value="Copy Stunts Roll20 Text" onclick="CopyText(stuntsCode.id)">
+                            <input type="button" value="Copy Stunts Roll20 Text" onclick="CopyToClipboard(stuntsCode.id)">
                         </div>
                     </section>
                     <section id="brawlSection" class="skillSection">
@@ -85,7 +85,7 @@
                             <code id="brawlCode">
                                 No Brawl die set.
                             </code>
-                            <input type="button" value="Copy Brawl Roll20 Text" onclick="CopyText(brawlCode.id)">
+                            <input type="button" value="Copy Brawl Roll20 Text" onclick="CopyToClipboard(brawlCode.id)">
                         </div>
                     </section>
                     <section id="toughSection" class="skillSection">
@@ -107,7 +107,7 @@
                             <code id="toughCode">
                                 No Tough die set.
                             </code>
-                            <input type="button" value="Copy Tough Roll20 Text" onclick="CopyText(toughCode.id)">
+                            <input type="button" value="Copy Tough Roll20 Text" onclick="CopyToClipboard(toughCode.id)">
                         </div>
                     </section>
                     <section id="techSection" class="skillSection">
@@ -129,7 +129,7 @@
                             <code id="techCode">
                                 No Tech die set.
                             </code>
-                            <input type="button" value="Copy Tech Roll20 Text" onclick="CopyText(techCode.id)">
+                            <input type="button" value="Copy Tech Roll20 Text" onclick="CopyToClipboard(techCode.id)">
                         </div>
                     </section>
                     <section id="weaponsSection" class="skillSection">
@@ -151,7 +151,7 @@
                             <code id="weaponsCode">
                                 No Weapons die set.
                             </code>
-                            <input type="button" value="Copy Weapons Roll20 Text" onclick="CopyText(weaponsCode.id)">
+                            <input type="button" value="Copy Weapons Roll20 Text" onclick="CopyToClipboard(weaponsCode.id)">
                         </div>
                     </section>
                     <section id="driveSection" class="skillSection">
@@ -173,7 +173,7 @@
                             <code id="driveCode">
                                 No Drive die set.
                             </code>
-                            <input type="button" value="Copy Drive Roll20 Text" onclick="CopyText(driveCode.id)">
+                            <input type="button" value="Copy Drive Roll20 Text" onclick="CopyToClipboard(driveCode.id)">
                         </div>
                     </section>
                     <section id="sneakSection" class="skillSection">
@@ -195,7 +195,7 @@
                             <code id="sneakCode">
                                 No Sneak die set.
                             </code>
-                            <input type="button" value="Copy Sneak Roll20 Text" onclick="CopyText(sneakCode.id)">
+                            <input type="button" value="Copy Sneak Roll20 Text" onclick="CopyToClipboard(sneakCode.id)">
                         </div>
                     </section>
                     <section id="witsSection" class="skillSection">
@@ -217,7 +217,7 @@
                             <code id="witsCode">
                                 No Wits die set.
                             </code>
-                            <input type="button" value="Copy Wits Roll20 Text" onclick="CopyText(witsCode.id)">
+                            <input type="button" value="Copy Wits Roll20 Text" onclick="CopyToClipboard(witsCode.id)">
                         </div>
                     </section>
                     <section id="hotSection" class="skillSection">
@@ -239,7 +239,7 @@
                             <code id="hotCode">
                                 No Hot die set.
                             </code>
-                            <input type="button" value="Copy Hot Roll20 Text" onclick="CopyText(hotCode.id)">
+                            <input type="button" value="Copy Hot Roll20 Text" onclick="CopyToClipboard(hotCode.id)">
                         </div>
                     </section>
                 </div>
