Adding additional scripting for event listeners and elements.

--- a/browser-extension/chrome/nsbu.html
+++ b/browser-extension/chrome/nsbu.html
@@ -63,7 +63,7 @@
                             <code id="stunts-code">
                                 No stunts die set.
                             </code>
-                            <input type="button" id="stunts-RollCode" value="Copy Stunts Roll20 Text" onclick="CopyText(stuntsCode.id)">
+                            <input type="button" id="stunts-RollCode" value="Copy Stunts Roll20 Text" onclick="CopyToClipboard(stuntsCode.id)">
                         </div>
                     </section>
                     <!--
@@ -86,7 +86,7 @@
                             <code id="brawlCode">
                                 No Brawl die set.
                             </code>
-                            <input type="button" value="Copy Brawl Roll20 Text" onclick="CopyText(brawlCode.id)">
+                            <input type="button" value="Copy Brawl Roll20 Text" onclick="CopyToClipboard(brawlCode.id)">
                         </div>
                     </section>
                     <section id="toughSection" class="skillSection">
@@ -108,7 +108,7 @@
                             <code id="toughCode">
                                 No Tough die set.
                             </code>
-                            <input type="button" value="Copy Tough Roll20 Text" onclick="CopyText(toughCode.id)">
+                            <input type="button" value="Copy Tough Roll20 Text" onclick="CopyToClipboard(toughCode.id)">
                         </div>
                     </section>
                     <section id="techSection" class="skillSection">
@@ -130,7 +130,7 @@
                             <code id="techCode">
                                 No Tech die set.
                             </code>
-                            <input type="button" value="Copy Tech Roll20 Text" onclick="CopyText(techCode.id)">
+                            <input type="button" value="Copy Tech Roll20 Text" onclick="CopyToClipboard(techCode.id)">
                         </div>
                     </section>
                     <section id="weaponsSection" class="skillSection">
@@ -152,7 +152,7 @@
                             <code id="weaponsCode">
                                 No Weapons die set.
                             </code>
-                            <input type="button" value="Copy Weapons Roll20 Text" onclick="CopyText(weaponsCode.id)">
+                            <input type="button" value="Copy Weapons Roll20 Text" onclick="CopyToClipboard(weaponsCode.id)">
                         </div>
                     </section>
                     <section id="driveSection" class="skillSection">
@@ -174,7 +174,7 @@
                             <code id="driveCode">
                                 No Drive die set.
                             </code>
-                            <input type="button" value="Copy Drive Roll20 Text" onclick="CopyText(driveCode.id)">
+                            <input type="button" value="Copy Drive Roll20 Text" onclick="CopyToClipboard(driveCode.id)">
                         </div>
                     </section>
                     <section id="sneakSection" class="skillSection">
@@ -196,7 +196,7 @@
                             <code id="sneakCode">
                                 No Sneak die set.
                             </code>
-                            <input type="button" value="Copy Sneak Roll20 Text" onclick="CopyText(sneakCode.id)">
+                            <input type="button" value="Copy Sneak Roll20 Text" onclick="CopyToClipboard(sneakCode.id)">
                         </div>
                     </section>
                     <section id="witsSection" class="skillSection">
@@ -218,7 +218,7 @@
                             <code id="witsCode">
                                 No Wits die set.
                             </code>
-                            <input type="button" value="Copy Wits Roll20 Text" onclick="CopyText(witsCode.id)">
+                            <input type="button" value="Copy Wits Roll20 Text" onclick="CopyToClipboard(witsCode.id)">
                         </div>
                     </section>
                     <section id="hotSection" class="skillSection">
@@ -240,7 +240,7 @@
                             <code id="hotCode">
                                 No Hot die set.
                             </code>
-                            <input type="button" value="Copy Hot Roll20 Text" onclick="CopyText(hotCode.id)">
+                            <input type="button" value="Copy Hot Roll20 Text" onclick="CopyToClipboard(hotCode.id)">
                         </div>
                     </section>
                     -->
