--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -741,7 +741,7 @@
             <div id="tabpanel-5" role="tabpanel" aria-labelledby="tab-5" class="is-hidden">
                 <div>
                     <h2>Settings</h2>
-                    <p>This buttons on this page currently do not work. I will be implementing it in a later version.</p>
+                    <p>This buttons on this page currently do not work. I will be implementing them in a later version.</p>
 
                     <h3>Export Character Info</h3>
                     <p>This button is used to export a character's information from this web app.</p>
