Backing up my work so I don't lose it.

--- a/browser-extension/chrome/nsbu.html
+++ b/browser-extension/chrome/nsbu.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
         <link rel="stylesheet" type="text/css" href="styles/light.css">
         <!-- <link rel="stylesheet" type="text/css" href="styles/dark.css"> -->
-        <!-- <link rel="stylesheet" type="text/css" href="styles/responsive.css"> -->
     </head>
     <body>
         <!-- Tabs for skills and abilities -->
@@ -64,7 +63,9 @@
                             </code>
                             <input type="button" id="stunts-RollCode" value="Copy Stunts Roll20 Text">
                         </div>
+                        <div><input type="button" id="stunts-Roll20" value="Roll Stunts in Roll20 Chat"></div>
                     </section>
+
                     <section id="brawlSection" class="skillSection">
                         <h3 id="brawl-heading">Brawl</h3>
                         <select aria-label="Brawl Die Value" name="brawlDie" id="brawl-die">
@@ -87,6 +88,7 @@
                             <input type="button" id="brawl-RollCode" value="Copy Brawl Roll20 Text">
                         </div>
                     </section>
+
                     <section id="toughSection" class="skillSection">
                         <h3 id="tough-heading">Tough</h3>
                         <select aria-label="Tough Die Value" name="toughDie" id="tough-die">
@@ -109,6 +111,7 @@
                             <input type="button" id="tough-RollCode" value="Copy Tough Roll20 Text">
                         </div>
                     </section>
+
                     <section id="techSection" class="skillSection">
                         <h3 id="tech-heading">Tech</h3>
                         <select aria-label="Tech Die Value" name="techDie" id="tech-die">
@@ -131,6 +134,7 @@
                             <input type="button" id="tech-RollCode" value="Copy Tech Roll20 Text">
                         </div>
                     </section>
+
                     <section id="weaponsSection" class="skillSection">
                         <h3 id="weapons-heading">Weapons</h3>
                         <select aria-label="Weapons Die Value" name="weaponsDie" id="weapons-die">
@@ -153,6 +157,7 @@
                             <input type="button" id="weapons-RollCode" value="Copy Weapons Roll20 Text">
                         </div>
                     </section>
+
                     <section id="driveSection" class="skillSection">
                         <h3 id="drive-heading">Drive</h3>
                         <select aria-label="Drive Die Value" name="driveDie" id="drive-die">
@@ -175,6 +180,7 @@
                             <input type="button" id="drive-RollCode" value="Copy Drive Roll20 Text">
                         </div>
                     </section>
+
                     <section id="sneakSection" class="skillSection">
                         <h3 id="sneak-heading">Sneak</h3>
                         <select aria-label="Sneak Die Value" name="sneakDie" id="sneak-die">
@@ -197,6 +203,7 @@
                             <input type="button" id="sneak-RollCode" value="Copy Sneak Roll20 Text">
                         </div>
                     </section>
+
                     <section id="witsSection" class="skillSection">
                         <h3 id="wits-heading">Wits</h3>
                         <select aria-label="Wits Die Value" name="witsDie" id="wits-die">
@@ -219,6 +226,7 @@
                             <input type="button" id="wits-RollCode" value="Copy Wits Roll20 Text">
                         </div>
                     </section>
+
                     <section id="hotSection" class="skillSection">
                         <h3 id="hot-heading">Hot</h3>
                         <select aria-label="Hot Die Value" name="hotDie" id="hot-die">
@@ -757,6 +765,7 @@
         <footer>
             <p>Written by Brennan Lee Mulligan & Carlos Luna.<br>Design & Layout by Ruby Lavin.<br>With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
         </footer>
+        <script src="scripts/background.js"></script>
         <script src="scripts/tabs.js"></script>
         <script src="scripts/nsbu.js"></script>
         <!-- <script src="scripts/lightSwitch.js"></script> -->
