--- a/browser-extension/chrome/nsbu.html
+++ b/browser-extension/chrome/nsbu.html
@@ -8,18 +8,21 @@
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
         <link rel="stylesheet" type="text/css" href="styles/light.css">
-        <!-- <link rel="stylesheet" type="text/css" href="styles/dark.css"> -->
+        <!--<link rel="stylesheet" type="text/css" href="styles/dark.css">-->
     </head>
     <body>
         <!-- Tabs for skills and abilities -->
         <main>
             <h1>Never Stop Blowing Up (NSBU) Tracker</h1>
-            <h2>Basic Character Information</h2>
-            <ul>
-                <li><label for="heroName">Action Hero Name:</label><input type="text" id="heroName"></li>
-            <li><label for="heroCatchphrase">Catchphrase:</label><input type="text" id="heroCatchphrase"></li>
-            <li><label for="turboTokens">Turbo Tokens</label><input type="number" id="turboTokens" value="2" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></li>
-            </ul>
+            <section>
+                <h2>Character Information</h2>
+                <div id="baseInfo">
+                    <span><label for="heroName">Action Hero Name</label><input type="text" id="heroName" size="25"></span>
+                    <span><label for="heroCatchphrase">Catchphrase</label><input type="text" id="heroCatchphrase" size="25"></span>
+                    <span><label for="turboTokens">Turbo Tokens</label><input type="number" id="turboTokens" value="2" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></span>
+                </div>
+            </section>
+            <h2>Skills and More</h2>
             <div role="tablist" aria-labelledby="tablist-1" class="manual">
                 <button id="tab-1" type="button" role="tab" aria-selected="true" aria-controls="tabpanel-1">
                     <span class="focus">Skills</span>
