Added additional info to the ReadMe file and the footer.

--- a/browser-extension/chrome/nsbu.html
+++ b/browser-extension/chrome/nsbu.html
@@ -766,7 +766,7 @@
             </div>
         </main>
         <footer>
-            <p>Written by Brennan Lee Mulligan & Carlos Luna.<br>Design & Layout by Ruby Lavin.<br>With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
+            <p>The Never Stop Blowing Up system was:</p><p>Inspired by the Kids on Bikes system.</p><p>Written by Brennan Lee Mulligan & Carlos Luna. Design & Layout by Ruby Lavin.<br>With special thanks to The Intrepid Heroes & Hunters Entertainment.</p>
         </footer>
         <script src="scripts/background.js"></script>
         <script src="scripts/tabs.js"></script>
