--- a/browser-extension/chrome/sidePanel.html
+++ b/browser-extension/chrome/sidePanel.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/sidePanel.css">
         <link rel="stylesheet" type="text/css" href="styles/tablist.css">
-        <link rel="stylesheet" type="text/css" href="styles/light.css">
-        <!--<link rel="stylesheet" type="text/css" href="styles/dark.css">-->
+        <!-- <link rel="stylesheet" type="text/css" href="styles/light.css"> -->
+        <link rel="stylesheet" type="text/css" href="styles/dark.css">
     </head>
     <body>
         <!-- Tabs for skills and abilities -->
