Added import / export functionality.

--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -746,16 +746,12 @@
                     <p>These buttons on this page currently do not work. I will be implementing them in a later version.</p>
 
                     <h3>Save Character Info</h3>
-                    <p>This button is used to save your current character information from this web app.</p>
-                    <input type="button" id="saveButton" disabled type="button" aria-label="Export Character Information" value="Save Character Information" onclick="saveCharacter();">
-
-                    <h3>Export Character Info</h3>
-                    <p>This button is used to export a character's information from this web app.</p>
-                    <input type="button" id="exportButton" disabled type="button" aria-label="Export Character Information" value="Export Character Information"onclick="exportCharacter();">
+                    <p>This button is used to export a character's information from this web app into a JSON file.</p>
+                    <input type="button" id="exportButton" type="button" aria-label="Export Character Information" value="Export Character Information" onclick="saveCharacter();">
 
                     <h3>Import Character Info</h3>
-                    <p>This button is used to import a character's information into this web app.</p>
-                    <input type="button" id="importButton" disabled type="button" aria-label="Import Character Information" value="Import Character Information" onclick="importCharacter();">
+                    <p>This button is used to import a character's information into this web app using a JSON file created previously.</p>
+                    <input type="button" id="importButton" type="button" aria-label="Import Character Information" value="Import Character Information" onclick="importCharacter();">
 
                     <h3>Dark Mode Toggle</h3>
                     <p>This button is intended to be used to toggle between light and dark mode.</p>
