--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -16,13 +16,15 @@
             <h1>Never Stop Blowing Up (NSBU) Tracker</h1>
 
             <h2>Basic Character Information</h2>
-            <ul>
-                <li><label for="heroName">Action Hero Name:</label><input type="text" id="heroName"></li>
-                <li><label for="heroCatchphrase">Catchphrase:</label><input type="text" id="heroCatchphrase"></li>
-                <li><label for="turboTokens">Turbo Tokens:</label><input type="number" id="turboTokens" value="2" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></li>
-                <li><label for="item-list">Items:</label><br><textarea id="item-list" name="item-list" rows="4" cols="50"></textarea></li>
-                <li><label>Other Notes:</label><br><textarea id="other-notes" name="other-notes" rows="4" cols="50"></textarea></li>
-            </ul>
+            <div>
+                <ul>
+                    <li><label for="heroName">Action Hero Name:</label><input type="text" id="heroName"></li>
+                    <li><label for="heroCatchphrase">Catchphrase:</label><input type="text" id="heroCatchphrase"></li>
+                    <li><label for="turboTokens">Turbo Tokens:</label><input type="number" id="turboTokens" value="2" min="0" max="9999" step="1" aria-label="Turbo Tokens" title="Turbo Tokens"></li>
+                    <li><label for="item-list">Items:</label><br><textarea id="item-list" name="item-list" rows="4" cols="50"></textarea></li>
+                    <li><label for="other-notes">Other Notes:</label><br><textarea id="other-notes" name="other-notes" rows="4" cols="50"></textarea></li>
+                </ul>
+            </div>
 
             <!-- Tabs for skills, abilities, and more -->
             <div role="tablist" aria-labelledby="tablist-1" class="manual">
@@ -756,6 +758,10 @@
                     <h3>Dark Mode Toggle</h3>
                     <p>This button is intended to be used to toggle between light and dark mode.</p>
                     <input type="button" id="darkModeToggle" disabled type="button" data-theme-toggle aria-label="Change to light Mode" value="Change to light Mode" onclick="toggleTheme();">
+
+                    <h3>Troubleshooting</h3>
+                    <p>Button in this section are intended to be used to fix known issues that may occur.</p>
+                    <input type="button" id="resetCopyText" type="button" aria-label="Reset Copy Text" value="Reset Copy Text" onclick="resetCopyText();">
                 </div>
             </div>
         </main>
@@ -765,5 +771,7 @@
         <script src="scripts/tabs.js"></script>
         <script src="scripts/skills.js"></script>
         <script src="scripts/characterActions.js"></script>
+        <script src="scripts/cookies.js"></script>
+        <script src="scripts/troubleshootButtons.js"></script>
     </body>
 </html>
