--- a/web interface/nsbu.html
+++ b/web interface/nsbu.html
@@ -10,8 +10,9 @@
         <!-- <link rel="stylesheet" type="text/css" href="styles/light.css"> -->
         <link rel="stylesheet" type="text/css" href="styles/dark.css">
         <!-- <link rel="stylesheet" type="text/css" href="styles/responsive.css"> -->
+        <script src="scripts/troubleshootButtons.js"></script>
     </head>
-    <body>
+    <body onload="resetCopyText()">
         <main>
             <h1>Never Stop Blowing Up (NSBU) Tracker</h1>
 
@@ -772,6 +773,5 @@
         <script src="scripts/skills.js"></script>
         <script src="scripts/characterActions.js"></script>
         <script src="scripts/cookies.js"></script>
-        <script src="scripts/troubleshootButtons.js"></script>
     </body>
 </html>
